...
                AnimatedVisibility(visible = loginEnabled) {
                    Button(
                        onClick = {
                            count++
                        }
                    ) {
                        Text(text = "LOGIN")
                    }
                }
            }
        }

    }
...
